--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
@@ -641,13 +641,15 @@
     "- **DBA: -0.574572 (-2.5941%)**: Short position in the Invesco DB Agriculture Fund.\n",
     "- **EPP: -1.999998 (-9.0297%)**: Short position in the iShares MSCI Pacific ex Japan ETF.\n",
     "\n",
-    "### Summary\n",
+    "### Synthesis\n",
     "\n",
     "The optimal weights derived from the optimization strategy show a highly leveraged portfolio with significant long and short positions. The strategy indicates a strong conviction in the expected returns derived from the factor model, leading to a diverse exposure across different asset classes and regions. This high leverage reflects a strategy that aims to maximize returns by taking advantage of market inefficiencies and leveraging factor exposures.\n",
     "\n",
     "- **Positive Weights**: Indicate a long position in ETFs such as FXE, SHV, USO, XBI, ILF, and FEZ.\n",
     "- **Negative Weights**: Indicate a short position in ETFs such as EWJ, GLD, QQQ, SPY, DBA, and EPP.\n",
-    "- **Relative Weight Analysis**: Provides insights into the"
+    "- **Relative Weight Analysis**: Provides insights into the proportion of the portfolio allocated to each ETF, showing a balanced yet leveraged approach.\n",
+    "\n",
+    "The detailed weight analysis in both absolute and relative terms helps in understanding the portfolio composition and the strategic decisions based on the factor model."
    ]
   },
   {
