--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
@@ -771,20 +771,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "\n",
     "#### $ 3.2 \\; \\; \\text{Strat} \\; \\; \\mathcal{II} $ "
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Optimization Strategy II Analysis\n",
+    "\n",
+    "## Executive Summary\n",
+    "\n",
+    "In this analysis, we derived the optimal weights for a portfolio using a different optimization strategy, Strategy II. This strategy aims to minimize the tracking error volatility while maximizing the expected return, subject to certain constraints. The analysis includes both absolute and relative (percentage) basis comparisons.\n",
+    "\n",
+    "## Strategy II: Optimization Function\n",
+    "\n",
+    "We will implement and analyze the optimization strategy that minimizes tracking error volatility.\n",
+    "\n",
+    "### Import Libraries\n",
+    "\n",
+    "```python\n",
+    "from scipy.optimize import minimize\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "```\n",
+    "\n",
+    "## Define the Tracking Error Volatility Function\n",
+    "\n",
+    "This function calculates the tracking error volatility, which is the standard deviation of the difference between the portfolio returns and benchmark returns."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Optimal weights for Strategy II: [ 0.02058621  0.1072614   0.09340881  0.10845794  0.02415552  0.03810605\n",
-      "  0.08879167  0.19751428  0.05704948  0.17376242 -0.05986655  0.15077276]\n"
+      "Optimal weights for Strategy II: [ 0.02058607  0.10726133  0.09340871  0.10845783  0.02415547  0.0381061\n",
+      "  0.08879188  0.19751439  0.05704953  0.17376249 -0.05986654  0.15077273]\n"
      ]
     }
    ],
