--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
@@ -800,7 +800,21 @@
     "\n",
     "## Define the Tracking Error Volatility Function\n",
     "\n",
-    "This function calculates the tracking error volatility, which is the standard deviation of the difference between the portfolio returns and benchmark returns."
+    "This function calculates the tracking error volatility, which is the standard deviation of the difference between the portfolio returns and benchmark returns.\n",
+    "\n",
+    "```python\n",
+    "def tracking_error_volatility(weights, returns_data, benchmark_returns):\n",
+    "\n",
+    "    # Calculate portfolio returns\n",
+    "    portfolio_returns = returns_data @ weights\n",
+    "    \n",
+    "    # Calculate tracking error volatility\n",
+    "    return np.sqrt(np.var(portfolio_returns - benchmark_returns))\n",
+    "```\n",
+    "\n",
+    "## Define the Optimization Function for Strategy II\n",
+    "\n",
+    "This function, `optimize_strategy_II`, takes the expected returns, returns data, factor loadings, beta constraints, a risk aversion parameter (lambda), and benchmark returns to optimize the portfolio weights."
    ]
   },
   {
