--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
@@ -814,7 +814,29 @@
     "\n",
     "## Define the Optimization Function for Strategy II\n",
     "\n",
-    "This function, `optimize_strategy_II`, takes the expected returns, returns data, factor loadings, beta constraints, a risk aversion parameter (lambda), and benchmark returns to optimize the portfolio weights."
+    "This function, `optimize_strategy_II`, takes the expected returns, returns data, factor loadings, beta constraints, a risk aversion parameter (lambda), and benchmark returns to optimize the portfolio weights.\n",
+    "\n",
+    "```python\n",
+    "def optimize_strategy_II(expected_returns, returns_data, factor_loadings, beta_constraints, lambd, benchmark_returns):\n",
+    "    n = len(expected_returns)\n",
+    "    \n",
+    "    def objective(weights):\n",
+    "        portfolio_return = expected_returns @ weights\n",
+    "        te_vol = tracking_error_volatility(weights, returns_data, benchmark_returns)\n",
+    "        return -(portfolio_return - lambd * te_vol)\n",
+    "    \n",
+    "    constraints = [\n",
+    "        {'type': 'eq', 'fun': lambda w: np.sum(w) - 1},\n",
+    "        {'type': 'ineq', 'fun': lambda w: beta_constraints[1] - np.sum(w * factor_loadings['Mkt-RF'].values)},\n",
+    "        {'type': 'ineq', 'fun': lambda w: np.sum(w * factor_loadings['Mkt-RF'].values) - beta_constraints[0]},\n",
+    "        {'type': 'ineq', 'fun': lambda w: 2 - w},\n",
+    "        {'type': 'ineq', 'fun': lambda w: w + 2}\n",
+    "    ]\n",
+    "    \n",
+    "    bounds = [(-2, 2) for _ in range(n)]\n",
+    "    result = minimize(objective, np.ones(n) / n, bounds=bounds, constraints=constraints)\n",
+    "    return result.x\n",
+    "```"
    ]
   },
   {
