--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
@@ -836,6 +836,21 @@
     "    bounds = [(-2, 2) for _ in range(n)]\n",
     "    result = minimize(objective, np.ones(n) / n, bounds=bounds, constraints=constraints)\n",
     "    return result.x\n",
+    "```\n",
+    "\n",
+    "## Example Usage\n",
+    "\n",
+    "We will now use the `optimize_strategy_II` function with example inputs to determine the optimal weights for the portfolio.\n",
+    "\n",
+    "```python\n",
+    "# Example usage\n",
+    "beta_constraints = [-2, 2]\n",
+    "lambd = 0.1\n",
+    "benchmark_returns = etf_returns['SPY'].values\n",
+    "returns_data = etf_returns.values  # Adjusted to use returns data directly\n",
+    "\n",
+    "optimal_weights_II = optimize_strategy_II(expected_returns, returns_data, factor_loadings_df, beta_constraints, lambd, benchmark_returns)\n",
+    "print(\"Optimal weights for Strategy II:\", optimal_weights_II)\n",
     "```"
    ]
   },
