--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
@@ -851,25 +851,29 @@
     "\n",
     "optimal_weights_II = optimize_strategy_II(expected_returns, returns_data, factor_loadings_df, beta_constraints, lambd, benchmark_returns)\n",
     "print(\"Optimal weights for Strategy II:\", optimal_weights_II)\n",
-    "```"
+    "```\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "```python\n",
+    "Optimal weights for Strategy II: [ 0.02058607  0.10726133  0.09340871  0.10845783  0.02415547  0.0381061\n",
+    "  0.08879188  0.19751439  0.05704953  0.17376249 -0.05986654  0.15077273]\n",
+    "```\n",
+    "\n",
+    "## Analysis of Optimal Weights for Strategy II\n",
+    "\n",
+    "The optimal weights for the portfolio, determined using Strategy II, are as follows:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Optimal weights for Strategy II: [ 0.02058607  0.10726133  0.09340871  0.10845783  0.02415547  0.0381061\n",
-      "  0.08879188  0.19751439  0.05704953  0.17376249 -0.05986654  0.15077273]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from scipy.optimize import minimize\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "\n",
     "def tracking_error_volatility(weights, returns_data, benchmark_returns):\n",
     "    # Calculate portfolio returns\n",
@@ -895,8 +899,24 @@
     "    \n",
     "    bounds = [(-2, 2) for _ in range(n)]\n",
     "    result = minimize(objective, np.ones(n) / n, bounds=bounds, constraints=constraints)\n",
-    "    return result.x\n",
-    "\n",
+    "    return result.x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimal weights for Strategy II: [ 0.02058607  0.10726133  0.09340871  0.10845783  0.02415547  0.0381061\n",
+      "  0.08879188  0.19751439  0.05704953  0.17376249 -0.05986654  0.15077273]\n"
+     ]
+    }
+   ],
+   "source": [
     "# Example usage\n",
     "beta_constraints = [-2, 2]\n",
     "lambd = 0.1\n",
