--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
@@ -780,6 +780,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "\n",
+    "# Optimization Strategy II Analysis\n",
+    "\n",
+    "## Executive Summary\n",
+    "\n",
+    "In this analysis, we derived the optimal weights for a portfolio using a different optimization strategy, Strategy II. This strategy aims to minimize the tracking error volatility while maximizing the expected return, subject to certain constraints. The analysis includes both absolute and relative (percentage) basis comparisons.\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Strategy II: Optimization Function\n",
     "\n",
     "We will implement and analyze the optimization strategy that minimizes tracking error volatility.\n",
