--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
@@ -869,7 +869,10 @@
     "\n",
     "- **Positive Weights**: Indicate a long position in ETFs such as FXE, EWJ, GLD, QQQ, SPY, SHV, DBA, USO, XBI, ILF, and FEZ.\n",
     "- **Negative Weights**: Indicate a short position in the ETF EPP.\n",
-    "- **Relative Weight Analysis**: Provides insights into the proportion of the portfolio allocated to each ETF, showing a balanced yet leveraged approach."
+    "- **Relative Weight Analysis**: Provides insights into the proportion of the portfolio allocated to each ETF, showing a balanced yet leveraged approach.\n",
+    "```\n",
+    "\n",
+    "---"
    ]
   },
   {
