--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
@@ -953,79 +953,9 @@
     "  0.08879188  0.19751439  0.05704953  0.17376249 -0.05986654  0.15077273]\n",
     "```\n",
     "\n",
-    "## Analysis of Optimal Weights for Strategy II\n",
+    "## (Code) Analysis of Optimal Weights for Strategy II\n",
     "\n",
     "The optimal weights for the portfolio, determined using Strategy II, are as follows:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Optimization Strategy II Analysis\n",
-    "\n",
-    "## Executive Summary\n",
-    "\n",
-    "In this analysis, we derived the optimal weights for a portfolio using Strategy II. This strategy aims to minimize tracking error volatility while maximizing the expected return, subject to certain constraints. The analysis includes both absolute and relative (percentage) basis comparisons.\n",
-    "\n",
-    "## Optimal Weights for Strategy II\n",
-    "\n",
-    "The optimal weights for the portfolio, determined using Strategy II, are as follows:\n",
-    "\n",
-    "\\[ \\text{Optimal weights for Strategy II:} \\]\n",
-    "\\[ [ 0.02058607, 0.10726133, 0.09340871, 0.10845783, 0.02415547, 0.0381061, 0.08879188, 0.19751439, 0.05704953, 0.17376249, -0.05986654, 0.15077273] \\]\n",
-    "\n",
-    "## Weight Analysis\n",
-    "\n",
-    "### Absolute and Relative Weights\n",
-    "\n",
-    "Below is a table showing the absolute weights and their corresponding relative (percentage) weights for each ETF:\n",
-    "\n",
-    "| ETF  | Absolute Weight | Relative Weight (%) |\n",
-    "|------|-----------------|---------------------|\n",
-    "| FXE  | 0.020586 | 1.769667 |\n",
-    "| EWJ  | 0.107261 | 9.219518 |\n",
-    "| GLD  | 0.093409 | 8.030507 |\n",
-    "| QQQ  | 0.108458 | 9.319907 |\n",
-    "| SPY  | 0.024155 | 2.076501 |\n",
-    "| SHV  | 0.038106 | 3.276467 |\n",
-    "| DBA  | 0.088792 | 7.626430 |\n",
-    "| USO  | 0.197514 | 16.957171 |\n",
-    "| XBI  | 0.057050 | 4.899822 |\n",
-    "| ILF  | 0.173762 | 14.916309 |\n",
-    "| EPP  | -0.059867 | -5.140592 |\n",
-    "| FEZ  | 0.150773 | 12.458295 |\n",
-    "\n",
-    "### Interpretation\n",
-    "\n",
-    "#### Positive Weights\n",
-    "\n",
-    "- **FXE**: 0.020586 (1.7697%)\n",
-    "- **EWJ**: 0.107261 (9.2195%)\n",
-    "- **GLD**: 0.093409 (8.0305%)\n",
-    "- **QQQ**: 0.108458 (9.3199%)\n",
-    "- **SPY**: 0.024155 (2.0765%)\n",
-    "- **SHV**: 0.038106 (3.2765%)\n",
-    "- **DBA**: 0.088792 (7.6264%)\n",
-    "- **USO**: 0.197514 (16.9572%)\n",
-    "- **XBI**: 0.057050 (4.8998%)\n",
-    "- **ILF**: 0.173762 (14.9163%)\n",
-    "- **FEZ**: 0.150773 (12.4583%)\n",
-    "\n",
-    "#### Negative Weights\n",
-    "\n",
-    "- **EPP**: -0.059867 (-5.1406%)\n",
-    "\n",
-    "### Summary\n",
-    "\n",
-    "```markdown\n",
-    "## Summary\n",
-    "\n",
-    "The optimal weights derived from Strategy II show a portfolio with both long and short positions. The strategy minimizes tracking error volatility while maximizing returns, leading to a balanced yet diversified portfolio. The detailed weight analysis in both absolute and relative terms helps in understanding the portfolio composition and the strategic decisions based on the factor model.\n",
-    "\n",
-    "- **Positive Weights**: Indicate a long position in ETFs such as FXE, EWJ, GLD, QQQ, SPY, SHV, DBA, USO, XBI, ILF, and FEZ.\n",
-    "- **Negative Weights**: Indicate a short position in the ETF EPP.\n",
-    "- **Relative Weight Analysis**: Provides insights into the proportion of the portfolio allocated to each ETF, showing a balanced yet leveraged approach."
    ]
   },
   {
