--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
@@ -795,29 +795,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Optimization Strategy II Analysis\n",
-    "\n",
-    "## Executive Summary\n",
-    "\n",
-    "In this analysis, we derived the optimal weights for a portfolio using Strategy II. This strategy aims to minimize tracking error volatility while maximizing the expected return, subject to certain constraints. The analysis includes both absolute and relative (percentage) basis comparisons.\n",
-    "\n",
     "## Optimal Weights for Strategy II\n",
     "\n",
     "The optimal weights for the portfolio, determined using Strategy II, are as follows:\n",
     "\n",
     "$$ \\text{Optimal (Absolute) Weights for Strategy II:} $$\n",
-    "- $$ \\text{FXE} : 0.02058607 ; $$\n",
-    "- $$ \\text{EWJ} : 0.10726133 ; $$\n",
-    "- $$ \\text{GLD} : 0.09340871 ; $$\n",
-    "- $$ \\text{QQQ} : 0.10845783 ; $$\n",
-    "- $$ \\text{SPY} : 0.02415547 ; $$\n",
-    "- $$ \\text{SHV} : 0.0381061 ; $$\n",
-    "- $$ \\text{DBA} : 0.08879188 ; $$\n",
-    "- $$ \\text{USO} : 0.19751439 ; $$\n",
-    "- $$ \\text{XBI} : 0.05704953 ; $$\n",
-    "- $$ \\text{ILF} : 0.17376249 ; $$\n",
-    "- $$ \\text{EPP} : -0.05986654 ; $$\n",
-    "- $$ \\text{FEZ} : 0.15077273 . $$\n",
+    "- $$ \\text{FXE} : 0.02058607 \\equiv 1.769667\\% ; $$\n",
+    "- $$ \\text{EWJ} : 0.10726133 \\equiv 9.219518\\% ; $$\n",
+    "- $$ \\text{GLD} : 0.09340871 \\equiv 8.030507\\% ; $$\n",
+    "- $$ \\text{QQQ} : 0.10845783 \\equiv 9.319907\\% ; $$\n",
+    "- $$ \\text{SPY} : 0.02415547 \\equiv 2.076501\\% ; $$\n",
+    "- $$ \\text{SHV} : 0.0381061 \\equiv 3.276467\\% ; $$\n",
+    "- $$ \\text{DBA} : 0.08879188 \\equiv 7.626430\\% ; $$\n",
+    "- $$ \\text{USO} : 0.19751439 \\equiv 16.957171\\% ; $$\n",
+    "- $$ \\text{XBI} : 0.05704953 \\equiv 4.899822\\% ; $$\n",
+    "- $$ \\text{ILF} : 0.17376249 \\equiv 14.916309\\% ; $$\n",
+    "- $$ \\text{EPP} : -0.05986654 \\equiv -5.140592\\% ; $$\n",
+    "- $$ \\text{FEZ} : 0.15077273 \\equiv 12.458295. $$\n",
     "\n",
     "## Weight Analysis\n",
     "\n",
