--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
@@ -799,7 +799,7 @@
     "\n",
     "The optimal weights for the portfolio, determined using Strategy II, are as follows:\n",
     "\n",
-    "$$ \\text{Optimal (Absolute) Weights for Strategy II:} $$\n",
+    "$$ \\text{Optimal (Absolute, Relative) Weights for Strategy II:} $$\n",
     "- $$ \\text{FXE} : 0.02058607 \\equiv 1.769667\\% ; $$\n",
     "- $$ \\text{EWJ} : 0.10726133 \\equiv 9.219518\\% ; $$\n",
     "- $$ \\text{GLD} : 0.09340871 \\equiv 8.030507\\% ; $$\n",
