--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
@@ -532,8 +532,19 @@
     "\n",
     "The optimal weights for the portfolio, determined using the convex optimization strategy, are as follows:\n",
     "\n",
-    "$$ \\text{Optimal Weights for Strategy I:} $$\n",
-    "$$ [ 1.57452868, -1.99997056, -1.99999286, -1.99999298, -1.99999269, 1.9999992, -0.57457214, 1.99999897, 1.99999577, 1.99999792, -1.99999754, 1.99999822] $$\n",
+    "$$ \\text{Optimal (Absolute, Relative) Weights for Strategy I}: $$\n",
+    "- $$ \\text{FXE} : 1.57452868 \\equiv 7.108791\\% ; $$\n",
+    "- $$ \\text{EWJ} : -1.999971 \\equiv -9.029605\\% ; $$\n",
+    "- $$ \\text{GLD} : -1.999993 \\equiv -9.029705\\% ; $$\n",
+    "- $$ \\text{QQQ} : -1.999993 \\equiv -9.029706\\% ; $$\n",
+    "- $$ \\text{SPY} : -1.999993 \\equiv -9.029705\\% ; $$\n",
+    "- $$ \\text{SHV} : 1.999999 \\equiv 9.029734\\% ; $$\n",
+    "- $$ \\text{DBA} : -0.574572 \\equiv -2.594118\\% ; $$\n",
+    "- $$ \\text{USO} : 1.999999 \\equiv 9.029733\\% ; $$\n",
+    "- $$ \\text{XBI} : 1.999996 \\equiv 9.029719\\% ; $$\n",
+    "- $$ \\text{ILF} : 1.999998 \\equiv 9.029728\\% ; $$\n",
+    "- $$ \\text{EPP} : -1.999998 \\equiv -9.029727\\% ; $$\n",
+    "- $$ \\text{FEZ} : 1.999998 \\equiv 9.029730\\% . $$\n",
     "\n",
     "## Weight Analysis in Relative (Percentage) Terms\n",
     "\n",
