abs vs. rel strat ii :(

--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-cv.ipynb
@@ -43,7 +43,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Set the seed for reproducibility [TATLTUAE :)]\n",
+    "np.random.seed(42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +233,7 @@
       "DBA -0.000032  0.002360 -0.000186  0.000630\n",
       "EPP -0.000142  0.010475 -0.000677  0.001387\n",
       "EWJ -0.000139  0.007755 -0.000921  0.000244\n",
-      "FEZ -0.000184  0.011116 -0.000657  0.001652\n",
+      "FEZ -0.000184  0.011116 -0.000658  0.001652\n",
       "FXE -0.000074  0.001090  0.000042  0.000097\n"
      ]
     }
@@ -387,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -562,18 +574,18 @@
      "text": [
       "     Absolute Weight  Relative Weight (%)\n",
       "ETF                                      \n",
-      "FXE         1.574529             7.108791\n",
-      "EWJ        -1.999971            -9.029605\n",
-      "GLD        -1.999993            -9.029705\n",
-      "QQQ        -1.999993            -9.029706\n",
-      "SPY        -1.999993            -9.029705\n",
-      "SHV         1.999999             9.029734\n",
-      "DBA        -0.574572            -2.594118\n",
-      "USO         1.999999             9.029733\n",
-      "XBI         1.999996             9.029719\n",
-      "ILF         1.999998             9.029728\n",
-      "EPP        -1.999998            -9.029727\n",
-      "FEZ         1.999998             9.029730\n"
+      "FXE         1.574531             7.108799\n",
+      "EWJ        -1.999971            -9.029603\n",
+      "GLD        -1.999993            -9.029704\n",
+      "QQQ        -1.999993            -9.029704\n",
+      "SPY        -1.999993            -9.029703\n",
+      "SHV         1.999999             9.029732\n",
+      "DBA        -0.574574            -2.594127\n",
+      "USO         1.999999             9.029731\n",
+      "XBI         1.999996             9.029717\n",
+      "ILF         1.999998             9.029727\n",
+      "EPP        -1.999998            -9.029725\n",
+      "FEZ         1.999998             9.029728\n"
      ]
     }
    ],
@@ -631,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,15 +733,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Optimal weights for Strategy I: [ 1.57452868 -1.99997056 -1.99999286 -1.99999298 -1.99999269  1.9999992\n",
-      " -0.57457214  1.99999897  1.99999577  1.99999792 -1.99999754  1.99999822]\n"
+      "Optimal weights for Strategy I: [ 1.57453086 -1.99997057 -1.99999286 -1.99999299 -1.99999269  1.9999992\n",
+      " -0.5745743   1.99999898  1.99999577  1.99999792 -1.99999754  1.99999822]\n"
      ]
     }
    ],
@@ -798,18 +810,18 @@
     "\n",
     "| ETF  | Absolute Weight | Relative Weight (%) |\n",
     "|------|-----------------|---------------------|\n",
-    "| FXE  | 0.020586 | 1.769667 |\n",
-    "| EWJ  | 0.107261 | 9.219518 |\n",
-    "| GLD  | 0.093409 | 8.030507 |\n",
-    "| QQQ  | 0.108458 | 9.319907 |\n",
-    "| SPY  | 0.024155 | 2.076501 |\n",
-    "| SHV  | 0.038106 | 3.276467 |\n",
-    "| DBA  | 0.088792 | 7.626430 |\n",
-    "| USO  | 0.197514 | 16.957171 |\n",
-    "| XBI  | 0.057050 | 4.899822 |\n",
-    "| ILF  | 0.173762 | 14.916309 |\n",
-    "| EPP  | -0.059867 | -5.140592 |\n",
-    "| FEZ  | 0.150773 | 12.458295 |\n",
+    "| FXE  | 0.020586 | 1.838485 |\n",
+    "| EWJ  | 0.107261 | 9.579181 |\n",
+    "| GLD  | 0.093409 | 8.342063 |\n",
+    "| QQQ  | 0.108458 | 9.686058 |\n",
+    "| SPY  | 0.024156 | 2.157260 |\n",
+    "| SHV  | 0.038106 | 3.403133 |\n",
+    "| DBA  | 0.088792 | 7.929729 |\n",
+    "| USO  | 0.197514 | 17.639414 |\n",
+    "| XBI  | 0.057050 | 5.094923 |\n",
+    "| ILF  | 0.173762 | 15.518201 |\n",
+    "| EPP  | -0.059867 | -5.346494 |\n",
+    "| FEZ  | 0.150773 | 13.465060 |\n",
     "\n",
     "### Interpretation\n",
     "\n",
@@ -924,6 +936,25 @@
     "  0.08879188  0.19751439  0.05704953  0.17376249 -0.05986654  0.15077273]\n",
     "```\n",
     "\n",
+    "## (Code To) Display (Relative) Weights in Tabular Format\n",
+    "\n",
+    "```python\n",
+    "# Output the optimal weights for better readability\n",
+    "etf_names = ['FXE', 'EWJ', 'GLD', 'QQQ', 'SPY', 'SHV', 'DBA', 'USO', 'XBI', 'ILF', 'EPP', 'FEZ']\n",
+    "weights_df_II = pd.DataFrame({\n",
+    "    'ETF': etf_names,\n",
+    "    'Absolute Weight': optimal_weights_II\n",
+    "})\n",
+    "\n",
+    "# Convert absolute weights to percentage weights\n",
+    "total_weight_II = sum(np.abs(optimal_weights_II))\n",
+    "relative_weights_II = (optimal_weights_II / total_weight_II) * 100\n",
+    "\n",
+    "weights_df_II['Relative Weight (%)'] = relative_weights_II\n",
+    "weights_df_II.set_index('ETF', inplace=True)\n",
+    "print(weights_df_II)\n",
+    "```\n",
+    "\n",
     "## (Code) Analysis of Optimal Weights for Strategy II\n",
     "\n",
     "The optimal weights for the portfolio, determined using Strategy II, are as follows:"
@@ -931,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -968,15 +999,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Optimal weights for Strategy II: [ 0.02058607  0.10726133  0.09340871  0.10845783  0.02415547  0.0381061\n",
-      "  0.08879188  0.19751439  0.05704953  0.17376249 -0.05986654  0.15077273]\n"
+      "Optimal weights for Strategy II: [ 0.02058613  0.10726124  0.09340882  0.10845798  0.02415555  0.038106\n",
+      "  0.08879178  0.19751432  0.05704953  0.1737624  -0.05986645  0.15077271]\n"
      ]
     }
    ],
@@ -989,6 +1020,51 @@
     "\n",
     "optimal_weights_II = optimize_strategy_II(expected_returns, returns_data, factor_loadings_df, beta_constraints, lambd, benchmark_returns)\n",
     "print(\"Optimal weights for Strategy II:\", optimal_weights_II)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Absolute Weight  Relative Weight (%)\n",
+      "ETF                                      \n",
+      "FXE         0.020586             1.838485\n",
+      "EWJ         0.107261             9.579181\n",
+      "GLD         0.093409             8.342063\n",
+      "QQQ         0.108458             9.686058\n",
+      "SPY         0.024156             2.157260\n",
+      "SHV         0.038106             3.403133\n",
+      "DBA         0.088792             7.929729\n",
+      "USO         0.197514            17.639414\n",
+      "XBI         0.057050             5.094923\n",
+      "ILF         0.173762            15.518201\n",
+      "EPP        -0.059866            -5.346494\n",
+      "FEZ         0.150773            13.465060\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Output the optimal weights for better readability\n",
+    "etf_names = ['FXE', 'EWJ', 'GLD', 'QQQ', 'SPY', 'SHV', 'DBA', 'USO', 'XBI', 'ILF', 'EPP', 'FEZ']\n",
+    "weights_df_II = pd.DataFrame({\n",
+    "    'ETF': etf_names,\n",
+    "    'Absolute Weight': optimal_weights_II\n",
+    "})\n",
+    "\n",
+    "# Convert absolute weights to percentage weights\n",
+    "total_weight_II = sum(np.abs(optimal_weights_II))\n",
+    "relative_weights_II = (optimal_weights_II / total_weight_II) * 100\n",
+    "\n",
+    "weights_df_II['Relative Weight (%)'] = relative_weights_II\n",
+    "weights_df_II.set_index('ETF', inplace=True)\n",
+    "print(weights_df_II)"
    ]
   },
   {
