--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -562,6 +562,73 @@
     "\n",
     "---"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Optimization Strategy I Analysis\n",
+    "\n",
+    "## Executive Summary\n",
+    "\n",
+    "In this analysis, we derived the optimal weights for a portfolio using a convex optimization strategy. The objective was to maximize the return minus the risk-adjusted return, subject to certain constraints. The strategy provided a highly leveraged portfolio with significant long and short positions across different asset classes and regions. The analysis includes both absolute and relative (percentage) basis comparisons.\n",
+    "\n",
+    "## Optimal Weights for Strategy I\n",
+    "\n",
+    "The optimal weights for the portfolio, determined using the convex optimization strategy, are as follows:\n",
+    "\n",
+    "\\[ \\text{Optimal weights for Strategy I:} \\]\n",
+    "\\[ [ 1.57452868, -1.99997056, -1.99999286, -1.99999298, -1.99999269, 1.9999992, -0.57457214, 1.99999897, 1.99999577, 1.99999792, -1.99999754, 1.99999822] \\]\n",
+    "\n",
+    "## Weight Analysis\n",
+    "\n",
+    "### Absolute and Relative Weights\n",
+    "\n",
+    "Below is a table showing the absolute weights and their corresponding relative (percentage) weights for each ETF:\n",
+    "\n",
+    "| ETF  | Absolute Weight | Relative Weight (%) |\n",
+    "|------|-----------------|---------------------|\n",
+    "| FXE  | 1.574529 | 7.108791 |\n",
+    "| EWJ  | -1.999971 | -9.029605 |\n",
+    "| GLD  | -1.999993 | -9.029705 |\n",
+    "| QQQ  | -1.999993 | -9.029706 |\n",
+    "| SPY  | -1.999993 | -9.029705 |\n",
+    "| SHV  | 1.999999 | 9.029734 |\n",
+    "| DBA  | -0.574572 | -2.594118 |\n",
+    "| USO  | 1.999999 | 9.029733 |\n",
+    "| XBI  | 1.999996 | 9.029719 |\n",
+    "| ILF  | 1.999998 | 9.029728 |\n",
+    "| EPP  | -1.999998 | -9.029727 |\n",
+    "| FEZ  | 1.999998 | 9.029730 |\n",
+    "\n",
+    "### Interpretation\n",
+    "\n",
+    "#### Positive Weights\n",
+    "\n",
+    "- **FXE**: 1.574529 (7.1088%)\n",
+    "- **SHV**: 1.999999 (9.0297%)\n",
+    "- **USO**: 1.999999 (9.0297%)\n",
+    "- **XBI**: 1.999996 (9.0297%)\n",
+    "- **ILF**: 1.999998 (9.0297%)\n",
+    "- **FEZ**: 1.999998 (9.0297%)\n",
+    "\n",
+    "#### Negative Weights\n",
+    "\n",
+    "- **EWJ**: -1.999971 (-9.0296%)\n",
+    "- **GLD**: -1.999993 (-9.0297%)\n",
+    "- **QQQ**: -1.999993 (-9.0297%)\n",
+    "- **SPY**: -1.999993 (-9.0297%)\n",
+    "- **DBA**: -0.574572 (-2.5941%)\n",
+    "- **EPP**: -1.999998 (-9.0297%)\n",
+    "\n",
+    "## Summary\n",
+    "\n",
+    "The optimal weights derived from the optimization strategy show a highly leveraged portfolio with significant long and short positions. The strategy indicates a strong conviction in the expected returns derived from the factor model, leading to a diverse exposure across different asset classes and regions. This high leverage reflects a strategy that aims to maximize returns by taking advantage of market inefficiencies and leveraging factor exposures.\n",
+    "\n",
+    "- **Positive Weights**: Indicate a long position in ETFs such as FXE, SHV, USO, XBI, ILF, and FEZ.\n",
+    "- **Negative Weights**: Indicate a short position in ETFs such as EWJ, GLD, QQQ, SPY, DBA, and EPP.\n",
+    "- **Relative Weight Analysis**: Provides insights into the proportion of the portfolio allocated to each ETF, showing a balanced yet leveraged approach."
+   ]
   }
  ],
  "metadata": {
