--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -567,6 +567,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 1. Report: Findings, Conclusions, Estimator Impact on Strategies, Crisis Periods\n",
+    "\n",
+    "In this section, we analyze the impact of the estimators on the behavior of the strategies, focusing on different crisis periods such as the subprime crisis and COVID-19. The analysis will cover the sensitivity to the term-structure of estimators (short-term, mid-term, long-term) for both covariance and expected returns, as well as sensitivity to the target $\\beta_T$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. Axes: Estimator Term-Structure Sensitivity for Covariance and Expected Returns, Target $\\beta_T$ Sensitivity\n",
+    "\n",
+    "In this section, we analyze the sensitivity of the strategies to the term-structure of estimators for both covariance and expected returns. We also examine the sensitivity to the target $\\beta_T$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. Notation, Strategies, Graphs, and Tables Description\n",
+    "\n",
+    "## Notation\n",
+    "\n",
+    "- **$\\mu$**: Expected returns vector\n",
+    "- **$\\Sigma$**: Covariance matrix\n",
+    "- **$\\beta_T$**: Target beta\n",
+    "- **$w$**: Portfolio weights\n",
+    "\n",
+    "## Strategies\n",
+    "\n",
+    "### Strategy I\n",
+    "\n",
+    "- **Objective**: Maximize return minus risk-adjusted return\n",
+    "- **Constraints**: Portfolio beta, weight bounds, sum of weights\n",
+    "\n",
+    "### Strategy II\n",
+    "\n",
+    "- **Objective**: Minimize tracking error volatility while maximizing return\n",
+    "- **Constraints**: Portfolio beta, weight bounds, sum of weights\n",
+    "\n",
+    "## Graphs and Tables\n",
+    "\n",
+    "The following sections contain the graphs and tables summarizing our quantitative and qualitative analysis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Optimization Strategy I Analysis\n",
     "\n",
     "## Executive Summary\n",
