--- a/FE630 - Final Project/fe630-fpr-md/v_R_i_o-R_u_E_a.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/v_R_i_o-R_u_E_a.ipynb
@@ -232,6 +232,37 @@
     "kpi_df = pd.DataFrame(kpi_results).T\n",
     "print(kpi_df)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot cumulative returns for each period\n",
+    "for period_name, period_results in results_dict.items():\n",
+    "    plt.figure(figsize=(10, 6))\n",
+    "    plt.plot(np.cumsum(period_results['Strategy I']), label='Strategy I')\n",
+    "    plt.plot(np.cumsum(period_results['Strategy II']), label='Strategy II')\n",
+    "    plt.plot(np.cumsum(period_results['Benchmark']), label='Benchmark (SPY)')\n",
+    "    plt.title(f'Cumulative Returns During {period_name}')\n",
+    "    plt.xlabel('Date')\n",
+    "    plt.ylabel('Cumulative Returns')\n",
+    "    plt.legend()\n",
+    "    plt.show()\n",
+    "\n",
+    "# Plot distribution of daily returns for each period\n",
+    "for period_name, period_results in results_dict.items():\n",
+    "    plt.figure(figsize=(10, 6))\n",
+    "    plt.hist(period_results['Strategy I'], bins=50, alpha=0.5, label='Strategy I')\n",
+    "    plt.hist(period_results['Strategy II'], bins=50, alpha=0.5, label='Strategy II')\n",
+    "    plt.hist(period_results['Benchmark'], bins=50, alpha=0.5, label='Benchmark (SPY)')\n",
+    "    plt.title(f'Distribution of Daily Returns During {period_name}')\n",
+    "    plt.xlabel('Daily Returns')\n",
+    "    plt.ylabel('Frequency')\n",
+    "    plt.legend()\n",
+    "    plt.show()"
+   ]
   }
  ],
  "metadata": {
