--- a/FE630 - Final Project/final/report.ipynb
+++ b/FE630 - Final Project/final/report.ipynb
@@ -49,38 +49,38 @@
     "The cumulative returns plots show the performance of Strategy I, Strategy II, and the Benchmark (SPY) across different periods. Here are the plots:\n",
     "\n",
     "1. **Period 1: March 2007 - June 2007**\n",
-    "   ![Cumulative Returns Period 1](sandbox:/mnt/data/cumulative_returns_period1.png)\n",
+    "   ![Cumulative Returns Period 1](./graphs/cumulative_returns_period1.png)\n",
     "\n",
     "2. **Period 2: July 2007 - March 2009**\n",
-    "   ![Cumulative Returns Period 2](sandbox:/mnt/data/cumulative_returns_period2.png)\n",
+    "   ![Cumulative Returns Period 2](./graphs/cumulative_returns_period2.png)\n",
     "\n",
     "3. **Period 3: March 2009 - January 2020**\n",
-    "   ![Cumulative Returns Period 3](sandbox:/mnt/data/cumulative_returns_period3.png)\n",
+    "   ![Cumulative Returns Period 3](./graphs/cumulative_returns_period3.png)\n",
     "\n",
     "4. **Period 4: February 2020 - May 2020**\n",
-    "   ![Cumulative Returns Period 4](sandbox:/mnt/data/cumulative_returns_period4.png)\n",
+    "   ![Cumulative Returns Period 4](./graphs/cumulative_returns_period4.png)\n",
     "\n",
     "5. **Period 5: May 2020 - March 2024**\n",
-    "   ![Cumulative Returns Period 5](sandbox:/mnt/data/cumulative_returns_period5.png)\n",
+    "   ![Cumulative Returns Period 5](./graphs/cumulative_returns_period5.png)\n",
     "\n",
     "## 4. Distribution of Daily Returns Analysis\n",
     "\n",
     "The distribution plots illustrate the frequency of daily returns for each period. Here are the plots:\n",
     "\n",
     "1. **Period 1: March 2007 - June 2007**\n",
-    "   ![Distribution of Daily Returns Period 1](sandbox:/mnt/data/distribution_returns_period1.png)\n",
+    "   ![Distribution of Daily Returns Period 1](./graphs/distribution_returns_period1.png)\n",
     "\n",
     "2. **Period 2: July 2007 - March 2009**\n",
-    "   ![Distribution of Daily Returns Period 2](sandbox:/mnt/data/distribution_returns_period2.png)\n",
+    "   ![Distribution of Daily Returns Period 2](./graphs/distribution_returns_period2.png)\n",
     "\n",
     "3. **Period 3: March 2009 - January 2020**\n",
-    "   ![Distribution of Daily Returns Period 3](sandbox:/mnt/data/distribution_returns_period3.png)\n",
+    "   ![Distribution of Daily Returns Period 3](./graphs/distribution_returns_period3.png)\n",
     "\n",
     "4. **Period 4: February 2020 - May 2020**\n",
-    "   ![Distribution of Daily Returns Period 4](sandbox:/mnt/data/distribution_returns_period4.png)\n",
+    "   ![Distribution of Daily Returns Period 4](./graphs/distribution_returns_period4.png)\n",
     "\n",
     "5. **Period 5: May 2020 - March 2024**\n",
-    "   ![Distribution of Daily Returns Period 5](sandbox:/mnt/data/distribution_returns_period5.png)\n",
+    "   ![Distribution of Daily Returns Period 5](./graphs/distribution_returns_period5.png)\n",
     "\n",
     "## 5. Analysis Summary\n",
     "\n",
